[workspace]
members = [
    "app",
    "interfaces",
    "reader",
    "parser",
    "validator",
    "runner",
    "utils",
    "plugin/plugin_api",
    "plugin/plugin_manager",
    "plugin/plugin_macros",
    "plugin/plugin_impl/utils_plugin",
    "plugin/plugin_impl/math_plugin",
]

workspace.resolver = "2"